--- a/HTML & CSS Mini Course/navigationBar.html
+++ b/HTML & CSS Mini Course/navigationBar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation Bar</title>
 
-    <link rel="stylesheet" href="bar.css">
+    <link rel="stylesheet" href="navigationBar.css">
 </head>
 <body>
     <nav>
